environments/qa/cast/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: backend
          image: ealen/echo-server:latest
          ports:
            - containerPort: 5000
