environments/qa/cast/image-replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: cast-app
          image: nginx:1.25
